# finances-frontend

./: .gitignore  main.py  pyproject.toml
.github/workflows/: deploy.yml
deployment/: Dockerfile  docker-compose.yml
src/streamlit/: frontend.py
src/utils/: database.py  plots.py
