[project]
name = "finances-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "types-requests>=2.32.4.20250913",
]
